# micro_saas_cobranca_p2p

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  casos_de_uso.txt  docker-compose.yml  fluxograma  import_env_to_ssm.bat  import_env_to_ssm.sh  organizacional.txt  roadmap.md
app/: .coverage  .dockerignore  Dockerfile  Dockerfile.local  celerybeat-schedule  entrypoint.sh  main.py  pyproject.toml  seed.py  send_email.py
app/core/: models.py  serializers.py  tasks.py  views.py
app/core/fixture/: plans.json
app/core/fixtures/: plans.json
app/core/migrations/: 0001_initial.py  0002_initial.py  0003_remove_charge_debtor_charge_email_charge_name_and_more.py  0004_notification_charge.py  0005_charge_whatsapp_authorized.py  0006_plan.py  0007_alter_charge_due_date_alter_charge_installment_count.py  0008_charge_asaas_id_charge_invoice_url_asaascustomer.py  0009_alter_asaascustomer_unique_together_and_more.py  0010_charge_aceite_token.py
app/core/notifications/: tasks.py  utils.py
app/project/: celery.py  settings.py  temp_view.py  urls.py
app/project/settings/: base.py  dev.py  prod.py
app/services/: asaas.py  asaas_client.py
app/static/js/: phone-mask.js  value-mask.js
app/templates/: base.html  base_public.html  forms.html  index.html  menu.html  top_public.html
app/templates/auth/: edit_profile.html  login.html  password_reset.html  (+3 more)
app/tests/: conftest.py  test_auth.py  test_charges.py  test_clientes.py
app/users/: admin.py  api_urls.py  apps.py  backends.py  models.py  serializers.py  signals.py  urls.py  views.py
(+28 files in other folders)
